--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Assets/CSS/Main.css">
+    <script src="Assets/Javascript/app.js" defer></script>
 </head>
+
 <body>
     <header>
-
+        <h1>Disney Sjov</h1>
     </header>
-    
+
     <main>
 
-    </main> 
-    
-    <footer>
+        <section id="myApp"></section>
 
+        <form action="">
+            <input type="search" name="search" id="searchInput">
+            <button id="searchButton">Serach</button>
+        </form>
+        <button id="showAllButton">Show All</button>
+
+    </main>
+
+    <footer>
+        <a href="https://disneyapi.dev/">API kilde</a>
     </footer>
 </body>
+
 </html>
