--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <form action="">
             <input type="search" name="search" id="searchInput">
-            <button id="searchButton">Serach</button>
+            <button id="searchButton">Search</button>
         </form>
         <button id="showAllButton">Show All</button>
 
